RESOLVED FIXED175307
GetOwnProperty of TypedArray indexed fields is wrongly configurable
https://bugs.webkit.org/show_bug.cgi?id=175307
Summary GetOwnProperty of TypedArray indexed fields is wrongly configurable
Robin Morisset
Reported 2017-08-07 17:01:37 PDT
``` let a = new Uint8TypedArray(10); let b = Object.getOwnPropertyDescriptor(a, 0); assert(b.configurable === false); ``` should not fail: by section 9.4.5.1 (https://tc39.github.io/ecma262/#sec-integer-indexed-exotic-objects-getownproperty-p) that applies to integer indexed exotic objects, and section 22.2.7 (https://tc39.github.io/ecma262/#sec-properties-of-typedarray-instances) that says that typed arrays are integer indexed exotic objects.
Attachments
Patch (3.35 KB, patch)
2017-08-07 17:16 PDT, Robin Morisset
no flags
Patch without the tab character (3.35 KB, patch)
2017-08-07 17:21 PDT, Robin Morisset
no flags
Robin Morisset
Comment 1 2017-08-07 17:16:41 PDT
Build Bot
Comment 2 2017-08-07 17:19:43 PDT
Attachment 317516 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Robin Morisset
Comment 3 2017-08-07 17:21:27 PDT
Created attachment 317518 [details] Patch without the tab character
Saam Barati
Comment 4 2017-08-07 17:45:10 PDT
r=me
WebKit Commit Bot
Comment 5 2017-08-07 19:29:46 PDT
Comment on attachment 317518 [details] Patch without the tab character Clearing flags on attachment: 317518 Committed r220377: <http://trac.webkit.org/changeset/220377>
WebKit Commit Bot
Comment 6 2017-08-07 19:29:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.