GetOwnProperty of TypedArray indexed fields is wrongly configurable https://bugs.webkit.org/show_bug.cgi?id=175307

Patch by Robin Morisset <rmorisset@apple.com> on 2017-08-07
Reviewed by Saam Barati.

JSTests:

* stress/typedarray-getownproperty-not-configurable.js: Added.
(assert):
(foo):

Source/JavaScriptCore:

```
let a = new Uint8Array(10);
let b = Object.getOwnPropertyDescriptor(a, 0);
assert(b.configurable === false);
```
should not fail: by section 9.4.5.1 (https://tc39.github.io/ecma262/#sec-integer-indexed-exotic-objects-getownproperty-p)
that applies to integer indexed exotic objects, and section 22.2.7 (https://tc39.github.io/ecma262/#sec-properties-of-typedarray-instances)
that says that typed arrays are integer indexed exotic objects.

* runtime/JSGenericTypedArrayViewInlines.h:
(JSC::JSGenericTypedArrayView<Adaptor>::getOwnPropertySlotByIndex):

Canonical link: https://commits.webkit.org/192017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220377 268f45cc-cd09-0410-ab3c-d52691b4dbfc